- fixing spacing for h2 tags

--- a/app/assets/stylesheets/desktop/scss/layout/_home.scss
+++ b/app/assets/stylesheets/desktop/scss/layout/_home.scss
@@ -99,6 +99,10 @@
       h1 {
         font-size: 20px;
       }
+
+      h2 {
+        margin: 15px 0;
+      }
     }
 
     .see-more-section {
@@ -117,7 +121,11 @@
       h1 {
         font-size: 42px;
       }
-  
+
+      h2 {
+        margin: 15px 0;
+      }
+
       .chevron-navigation {
         float: right;
         margin: 35px 15px 0 0;
